--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "@loopback/rest": "^5.2.0",
     "@loopback/rest-explorer": "^2.2.6",
     "@loopback/service-proxy": "^2.3.4",
+    "dotenv": "^8.2.0",
+    "nodemon": "^2.0.4",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
