--- a/package.json
+++ b/package.json
@@ -64,5 +64,13 @@
     "@loopback/eslint-config": "^8.0.3",
     "eslint": "^7.3.1",
     "typescript": "~3.9.5"
+  },
+  "nodemonConfig": {
+    "verbose": true,
+    "watch": [
+      "src/"
+    ],
+    "ext": ".ts",
+    "exec": "npm start"
   }
 }
