--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@loopback/rest-explorer": "^2.2.9",
     "@loopback/service-proxy": "^2.3.7",
     "dotenv": "^8.2.0",
+    "loopback-connector-es": "https://github.com/codeedu/loopback-connector-elastic-search/tarball/master",
     "nodemon": "^2.0.4",
     "tslib": "^2.0.0"
   },
