--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "@loopback/rest": "^6.1.0",
     "@loopback/rest-explorer": "^2.2.9",
     "@loopback/service-proxy": "^2.3.7",
+    "@types/amqplib": "^0.5.13",
+    "amqplib": "^0.6.0",
     "dotenv": "^8.2.0",
     "loopback-connector-es": "https://github.com/codeedu/loopback-connector-elastic-search/tarball/master",
     "nodemon": "^2.0.4",
