Adicionando variáveis do rabbitmq

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ APP_ENV=local
 ELASTIC_SEARCH_HOST=http://elasticsearch:9200
 ELASTIC_SEARCH_REQUEST_TIMEOUT=30000
 ELASTIC_SEARCH_PING_TIMEOUT=3000
+
+RABBITMQ_HOSTNAME=rabbitmq
+RABBITMQ_USERNAME=admin
+RABBITMQ_PASSWORD=admin
