Definindo forma reconhecimento no consumo mensagem

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ ELASTIC_SEARCH_PING_TIMEOUT=3000
 RABBITMQ_HOSTNAME=rabbitmq
 RABBITMQ_USERNAME=admin
 RABBITMQ_PASSWORD=admin
+# 0-ACK / 1-NACK / 2-REQUEUE
+RABBITMQ_ACKNOWLEDGEMENT=0
